src/css/scrolling.less
.matchup {
  text-align: center;

  @media @tablet {
    height: auto;
    padding-top: 20px;
  }

  .overlay-column {
    text-align: left;
    z-index: 999;
    position: relative;
    margin: auto;
    width: 45%;
    padding: 400px 50px 0;
    height: 100%;
    // background: linear-gradient(to right, transparent 0, black 25%, black 75%, transparent 100%);

    @media @tablet {
      width: 80%;
      margin: auto;
      padding: 0;
    }

    @media @mobile {
      background: transparent;
      width: 100%;
      clear: both;
      padding: 0;
    }
  }

  .profile {
    position: fixed;
    top: 0;
    opacity: 0;
    max-width: 50%;
    height: 100%;
    display: none;

    .ready & {
      display: block;
      @media @tablet { display: inline-block }
      transition: opacity .3s linear, transform .2s ease-out;
    }

    @media @tablet {
      position: relative;
      width: 30%;
      height: auto;
      opacity: 1;
    }

    @media @mobile {
      width: 40%;
      margin-right: 3%;
    }

    @distance: 20%;
    @rotation: 10deg;
    @perspective: 500px;

    @crop: -40px;

    &.left-side {
      left: @crop * 3;
      transform-origin: left;

      @media (min-width: 1200px) {
        left: @crop;
      }

      @media (min-width: 1600px) {
        left: 0px;
      }

      .transform(translateX(-@distance));
      .transform(perspective(@perspective) translateX(-@distance) rotateY(@rotation));
      @media @tablet { .transform(none) }
    }

    &.right-side {
      right: @crop * 3;
      transform-origin: right;

      @media (min-width: 1200px) {
        right: @crop;
      }

      @media (min-width: 1600px) {
        right: 0px;
      }

      .transform(translateX(@distance));
      .transform(perspective(@perspective) translateX(@distance) rotateY(-@rotation));
      @media @tablet { .transform(none) }
    }

  }

  &.active {
    .profile {
      opacity: 1;
      .transform(translateX(0));
    }
  }

}

